--- a/index.html
+++ b/index.html
@@ -285,7 +285,7 @@
             <div class="gallery">
                 <img src="daylophoc.jpg" alt="Phòng học khang trang">
                 <img src="nhaan.jpg" alt="Nhà ăn sạch sẽ ">
-                <img src="vuichoi2" alt="Sân bóng của trường">
+                <img src="vuichoi2.jpg" alt="Sân bóng của trường">
             </div>
         </section>
 
